src/other/mico-2.3.12/test/idl/error/case7.idl

/*
 * Oneway operation may not contain output parameters or raises expressions.
 */

interface A
{
  oneway void foo( out long x );
};
